--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   camera: ^0.8.1+2
   sqflite: ^2.0.0+3
+  path_provider: ^2.0.2
 
 dev_dependencies:
   flutter_test:
